name:                beam-sqlite
version:             0.2.0.0
synopsis:            Connection layer between beam and sqlite
description:
homepage:            https://github.com/githubuser/beam-sqlite#readme
license:             BSD3
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           (C) 2017-2018 Travis Athougies
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:    Database.Beam.Sqlite
                      Database.Beam.Sqlite.Types
                      Database.Beam.Sqlite.Syntax
                      Database.Beam.Sqlite.Connection
                      Database.Beam.Sqlite.Migrate
  build-depends:      base          >=4.7  && <5,

                      beam-core     ==0.6.0.0,
                      beam-migrate  ==0.2.0.0,

                      sqlite-simple >=0.4  && <0.5,
                      text          >=1.0  && <1.3,
                      bytestring    >=0.10 && <0.11,
                      hashable      >=1.2  && <1.3,
                      time          >=1.6  && <1.10,
                      dlist         >=0.8  && <0.9,
                      mtl           >=2.1  && <2.3,
                      free          >=4.12 && <4.13,
                      scientific    >=0.3  && <0.4,
                      network-uri   >=2.6  && <2.7,
                      aeson         >=0.11 && <1.3,
                      attoparsec,
                      direct-sqlite >= 2.3
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes, FlexibleInstances,
                      DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TypeFamilies, GADTs, OverloadedStrings,
                      CPP, TypeApplications, FlexibleContexts, ConstraintKinds
  ghc-options:        -Wall
  if flag(werror)
    ghc-options:       -Werror

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/tathougies/beam.git
  subdir: beam-sqlite
