name:                beam-sqlite
version:             0.4.0.0
synopsis:            Beam driver for SQLite
description:         Beam driver for the <https://sqlite.org/ SQLite> embedded database.
                     See <http://tathougies.github.io/beam/user-guide/backends/beam-sqlite/ here>
                     for more information
homepage:            http://tathougies.github.io/beam/user-guide/backends/beam-sqlite/
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           (C) 2017-2018 Travis Athougies
category:            Database
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     ChangeLog.md
bug-reports:          https://github.com/tathougies/beam/issues
cabal-version:       1.18

library
  exposed-modules:    Database.Beam.Sqlite
                      Database.Beam.Sqlite.Syntax
                      Database.Beam.Sqlite.Connection
                      Database.Beam.Sqlite.Migrate
  other-modules:      Database.Beam.Sqlite.SqliteSpecific
  build-depends:      base          >=4.7  && <5,

                      beam-core     >=0.8  && <0.9,
                      beam-migrate  >=0.4  && <0.5,

                      sqlite-simple >=0.4  && <0.5,
                      text          >=1.0  && <1.3,
                      bytestring    >=0.10 && <0.11,
                      hashable      >=1.2  && <1.3,
                      time          >=1.6  && <1.10,
                      dlist         >=0.8  && <0.9,
                      mtl           >=2.1  && <2.3,
                      free          >=4.12 && <5.2,
                      scientific    >=0.3  && <0.4,
                      network-uri   >=2.6  && <2.7,
                      aeson         >=0.11 && <1.5,
                      attoparsec    >=0.13 && <0.14
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes, FlexibleInstances,
                      DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TypeFamilies, GADTs, OverloadedStrings,
                      CPP, TypeApplications, FlexibleContexts, ConstraintKinds
  ghc-options:        -Wall
  if flag(werror)
    ghc-options:       -Werror

  if os(windows)
    cpp-options:      -DWINDOWS
    build-depends:    Win32         >=2.4 && <2.8
  if os(freebsd) || os(netbsd) || os(darwin) || os(linux) || os(solaris)
    cpp-options:      -DUNIX
    build-depends:    unix          >=2.0 && <2.8

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/tathougies/beam.git
  subdir: beam-sqlite
