name:                beam-sqlite
version:             0.5.0.0
synopsis:            Beam driver for SQLite
description:         Beam driver for the <https://sqlite.org/ SQLite> embedded database.
                     See <https://haskell-beam.github.io/beam/user-guide/backends/beam-sqlite/ here>
                     for more information
homepage:            https://haskell-beam.github.io/beam/user-guide/backends/beam-sqlite/
license:             MIT
license-file:        LICENSE
author:              Travis Athougies
maintainer:          travis@athougies.net
copyright:           (C) 2017-2018 Travis Athougies
category:            Database
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     ChangeLog.md
bug-reports:          https://github.com/tathougies/beam/issues
cabal-version:       1.18

library
  exposed-modules:    Database.Beam.Sqlite
                      Database.Beam.Sqlite.Syntax
                      Database.Beam.Sqlite.Connection
                      Database.Beam.Sqlite.Migrate
  other-modules:      Database.Beam.Sqlite.SqliteSpecific
  build-depends:      base          ,
                      beam-core     ,
                      beam-migrate  ,
                      sqlite-simple ,
                      text          ,
                      bytestring    ,
                      hashable      ,
                      time          ,
                      dlist         ,
                      mtl           ,
                      free          ,
                      scientific    ,
                      network-uri   ,
                      aeson         ,
                      attoparsec
  default-language:   Haskell2010
  default-extensions: ScopedTypeVariables, OverloadedStrings, MultiParamTypeClasses, RankNTypes, FlexibleInstances,
                      DeriveDataTypeable, DeriveGeneric, StandaloneDeriving, TypeFamilies, GADTs, OverloadedStrings,
                      CPP, TypeApplications, FlexibleContexts, ConstraintKinds
  ghc-options:        -Wall
  if flag(werror)
    ghc-options:       -Werror

  if os(windows)
    cpp-options:      -DWINDOWS
    build-depends:    Win32         >=2.4 && <2.8
  if os(freebsd) || os(netbsd) || os(openbsd) || os(darwin) || os(linux) || os(solaris) || os(android)
    cpp-options:      -DUNIX
    build-depends:    unix          >=2.0 && <2.8

flag werror
  description: Enable -Werror during development
  default:     False
  manual:      True

source-repository head
  type: git
  location: https://github.com/tathougies/beam.git
  subdir: beam-sqlite
